Sized Home image correctly though still not aligned in the center + Slowly filling in CSS sheet

--- a/main.css
+++ b/main.css
@@ -6,12 +6,32 @@ body {
     font-family: 'Segoe UI';
     background-color: white;
     color: black;
+    margin: 1rem;
 }
 
 header {
-    position: relative;
     padding: 0.5rem; 
-    margin: 0;
+    border-bottom: 4px solid black;
+    margin-bottom: 10px;
+    align-content: inline;
+}
+
+.header-head {
+    position: relative;
+    text-align: center;
+    word-spacing: 50px;
+    align-items: inline;
+}
+
+.navigation {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: auto;
+    height: auto;
+
 }
 
 nav a {
@@ -19,7 +39,7 @@ nav a {
     color: black;
     text-decoration: none;
     font-size: 16px;
-    border-bottom: 4px solid #000000;
+    word-spacing: 50px;
 }
 
 .nav {
@@ -42,24 +62,36 @@ nav ul {
     left: 1rem;
 }
 
-.cart {
-    text-align: left;
-    position: absolute;
-}
-
 nav li {
     display: inline;
     margin-right: 0.5rem;
 }
 
-.About img {
-    width: auto;
-    height: 250px;
+.home {
+    background-color: black;
+    color: white;
+    align-content: center;
+}
+
+.home img {
+    width: 1000px;
+    height: 450px;
     align-items: right;
 }
 
-.home section img {
-    width: 500px;
+.About {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: auto;
+    height: auto;
+}
+
+.image1, .image2 {
+    width: auto;
+    height: 250px;
+    align-items: left;
 }
 
 .about-header {
@@ -68,8 +100,13 @@ nav li {
 }
 
 .about-first {
+    text-align: left;
     width: 47%;
     height: 300px;
+}
+
+.about-second {
+    text-align: right;
 }
 
 .image2 {
@@ -122,6 +159,10 @@ h3 {
     color: #BF7631;
 }
 
+.section {
+    display: inline;
+    align-items: flex-start;
+}
 
 input,
 textarea,
@@ -134,11 +175,14 @@ select {
 }
 
 input[type="submit"] {
+    display: block;
     background-color: #BF7631;
     color: white;
+    width: 100px;   
 }
 
 .contact {
+    display: block;
     border-bottom: 4px solid black;
     width: 60%;
 }
@@ -149,20 +193,25 @@ input[type="submit"] {
 }
 
 
-
-footer{
-    background-color: #BF7631;
-    text-align: center;
-    padding: 4rem;
-    width: 100%;
+.footer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: auto;
     height: auto;
-    left: 0;
-    right: 0;
-    word-spacing: 500;
+    background-color: #BF7631;
     margin-top: 40px;
 }
 
-.footer img {
-    image-orientation: inline;
-    width: 45px;
+.footer-icons {
+    align-items: inline;
+    text-align: center;
+
+}
+
+.footer-info {
+    word-spacing: 50;
+    text-align: left;
 }
